--- a/FishStore/Views/Admin/Entities.cshtml
+++ b/FishStore/Views/Admin/Entities.cshtml
@@ -8,8 +8,10 @@
 <ul>
     <li><a asp-controller="Admin" asp-action="Clothing">Одежда</a></li>
     <li><a asp-controller="Admin" asp-action="Rod">Удочки</a></li>
+    <li><a asp-controller="Admin" asp-action="Gear">Снасти</a></li>
     <li><a asp-controller="Admin" asp-action="Bait">Наживка</a></li>
     <li><a asp-controller="Admin" asp-action="TypeOfClothing">Типы одежды</a></li>
     <li><a asp-controller="Admin" asp-action="TypeOfRod">Типы удочек</a></li>
+    <li><a asp-controller="Admin" asp-action="TypeOfGear">Типы снасти</a></li>
     <li><a asp-controller="Admin" asp-action="TypeOfBait">Типы наживки</a></li>
 </ul>
