Добавлен поиск по именам продуктов

--- a/FishStore/Views/Shared/_Layout.cshtml
+++ b/FishStore/Views/Shared/_Layout.cshtml
@@ -35,10 +35,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="Bait">Наживка</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">О нас</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">О нас</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Доставка</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Delivery">Доставка</a>
                         </li>
                         <li class="nav-item">
                             <form method="get" asp-action="Index" asp-controller="Search">
