Добавлены роли и авторизация

--- a/FishStore/Views/Admin/Entities.cshtml
+++ b/FishStore/Views/Admin/Entities.cshtml
@@ -15,3 +15,8 @@
     <li><a asp-controller="Admin" asp-action="TypeOfGear">Типы снасти</a></li>
     <li><a asp-controller="Admin" asp-action="TypeOfBait">Типы наживки</a></li>
 </ul>
+<h5>Аккаунтинг</h5>
+<ul>
+    <li><a asp-controller="Admin" asp-action="User">Пользователи</a></li>
+    <li><a asp-controller="Admin" asp-action="Role">Роли</a></li>
+</ul>
