--- a/FishStore/Views/Search/Index.cshtml
+++ b/FishStore/Views/Search/Index.cshtml
@@ -2,7 +2,7 @@
 
 <br />
 <div class="container">
-    <h1 class="display-5 ">По запросу:</h1>
+    <h1 class="display-5 ">По запросу @ViewBag.SearchText:</h1>
     <div class="row bg-light">
         @if (Model != null){
             foreach(var product in Model)
