--- a/FishStore/Views/Admin/TypeOfBait.cshtml
+++ b/FishStore/Views/Admin/TypeOfBait.cshtml
@@ -5,6 +5,10 @@
 
 <h2>Типы наживок</h2>
 <a class="text-primary" asp-controller="Admin" asp-action="AddTypeOfBait">Добавить тип наживки</a>
+<form method="get" asp-action="TypeOfBait" asp-controller="Admin">
+    <input placeholder="Тип" type="text" name="searchText"/>
+    <button type="submit" class="btn btn-primary">Поиск</button>
+</form>
 <table class="table">
     <thead>
         <tr>
