--- a/FishStore/Views/Admin/Clothing.cshtml
+++ b/FishStore/Views/Admin/Clothing.cshtml
@@ -5,6 +5,10 @@
 
 <h2>Одежда</h2>
 <a class="text-primary" asp-controller="Admin" asp-action="AddClothing">Добавить одежду</a>
+<form method="get" asp-action="Clothing" asp-controller="Admin">
+    <input placeholder="Пуховик" type="text" name="searchText"/>
+    <button type="submit" class="btn btn-primary">Поиск</button>
+</form>
 <table class="table">
     <thead>
         <tr>
