Добавлена корзина и заказы

--- a/FishStore/Views/Admin/Entities.cshtml
+++ b/FishStore/Views/Admin/Entities.cshtml
@@ -20,3 +20,8 @@
     <li><a asp-controller="Admin" asp-action="User">Пользователи</a></li>
     <li><a asp-controller="Admin" asp-action="Role">Роли</a></li>
 </ul>
+<h5>Ордеринг</h5>
+<ul>
+    <li><a asp-controller="Admin" asp-action="Order">Заказы</a></li>
+    <li><a asp-controller="Admin" asp-action="OrderStatus">Статусы заказов</a></li>
+</ul>
