--- a/FishStore/Views/Catalog/Clothing.cshtml
+++ b/FishStore/Views/Catalog/Clothing.cshtml
@@ -10,7 +10,13 @@
             {
                 <a href="@Url.Action("Clothing", "Product", new {id = product.ID})" class="rounded p-3 col-2" style="height: 240px;">
                     <div class="" style="background-image: url(@product.PhotoLink); height: 80%; background-size:cover; background-repeat:no-repeat;"> </div>
-                    <div>@product.Name</div>
+                    @if(@product.Name.Length <= 35){
+                        <div>@product.Name</div>
+                    }
+                    else
+                    {
+                        <div>@(product.Name.Substring(0, 32) + "...")</div>
+                    }
                     <div>@product.Cost р.</div>
                 </a>
             }
