--- a/FishStore/Views/Account/Register.cshtml
+++ b/FishStore/Views/Account/Register.cshtml
@@ -10,6 +10,12 @@
             <input type="text" asp-for="Name" />
             <span asp-validation-for="Name" />
         </div>
+    
+        <div>
+            <label asp-for="DeliveryAdress">Адрес доставки:</label>
+            <input type="text" asp-for="DeliveryAdress"/>
+            <span asp-validation-for="DeliveryAdress" />
+        </div>
         <div>
             <label asp-for="Email">Введите Email</label><br />
             <input type="email" asp-for="Email" />
