--- a/FishStore/Views/Admin/AddUser.cshtml
+++ b/FishStore/Views/Admin/AddUser.cshtml
@@ -19,6 +19,10 @@
         </select>
     </div>
     <div class="form-group">
+        <label asp-for="DeliveryAdress">Адрес доставки:</label>
+        <input class="form-control" asp-for="DeliveryAdress" placeholder="Улица Поднебесная 13"/>
+    </div>
+    <div class="form-group">
         <label asp-for="Email">Email:</label>
         <input type="email" class="form-control" asp-for="Email" placeholder=""/>
     </div>
